// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests works on 1 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "FLORIDA CONTEST GROUP",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": "ALL",
  "logEmail": undefined,
  "logFile": null,
  "logLocation": "NFL",
  "logMode": "MIXED",
  "logOperator": "SINGLE",
  "logPower": "QRP",
  "logScore": null,
  "logStation": "FIXED",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": "Henry Darnell",
}
`;

exports[`snapshot tests works on 2 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": "ALL",
  "logEmail": undefined,
  "logFile": null,
  "logLocation": "NC",
  "logMode": "SSB",
  "logOperator": "SINGLE",
  "logPower": "HIGH",
  "logScore": 211,
  "logStation": "",
  "logTransmitter": "",
  "multipleOperators": false,
  "name": "REDACT",
}
`;

exports[`snapshot tests works on 3 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "Arizona Outlaws Contest Club",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": true,
  "logBand": "ALL",
  "logEmail": "REDACT@outlook.com",
  "logFile": null,
  "logLocation": "AZ",
  "logMode": "SSB",
  "logOperator": undefined,
  "logPower": "HIGH",
  "logScore": 299,
  "logStation": "FIXED",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": "Sheila Arlene Schwartz",
}
`;

exports[`snapshot tests works on 4 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": undefined,
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": undefined,
  "logEmail": undefined,
  "logFile": null,
  "logLocation": undefined,
  "logMode": undefined,
  "logOperator": undefined,
  "logPower": undefined,
  "logScore": null,
  "logStation": undefined,
  "logTransmitter": undefined,
  "multipleOperators": false,
  "name": undefined,
}
`;

exports[`snapshot tests works on 5 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": "ALL",
  "logEmail": "REDACT@gmail.com",
  "logFile": null,
  "logLocation": "",
  "logMode": "MX",
  "logOperator": "SINGLE",
  "logPower": "LOW",
  "logScore": null,
  "logStation": "FIXED",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": "",
}
`;

exports[`snapshot tests works on 6 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "Hudson Valley Contesters and DXers",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": "40M",
  "logEmail": "REDACT@AOL.COM",
  "logFile": null,
  "logLocation": "ENY",
  "logMode": "SSB",
  "logOperator": undefined,
  "logPower": "LOW",
  "logScore": 16,
  "logStation": "FIXED",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": "Henry Darnell",
}
`;

exports[`snapshot tests works on 7 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": true,
  "logBand": "ALL",
  "logEmail": "REDACT@COMCAST.NET",
  "logFile": null,
  "logLocation": "IL",
  "logMode": "CW",
  "logOperator": "SINGLE",
  "logPower": "HIGH",
  "logScore": 505,
  "logStation": "FIXED",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": "Henry Darnell",
}
`;

exports[`snapshot tests works on 8 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "Snohomish County Hams Club",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": "ALL",
  "logEmail": "REDACT@frontier.com",
  "logFile": null,
  "logLocation": "WA",
  "logMode": "SSB",
  "logOperator": "REDACT",
  "logPower": "LOW",
  "logScore": 9,
  "logStation": "FIXED",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": "Henry Darnell",
}
`;

exports[`snapshot tests works on 9 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "Tennessee Contest Group",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": true,
  "logBand": "ALL",
  "logEmail": "REDACT@ARRL.NET",
  "logFile": null,
  "logLocation": "TN",
  "logMode": "SSB",
  "logOperator": "REDACT",
  "logPower": "LOW",
  "logScore": 204,
  "logStation": "FIXED",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": "Henry Darnell",
}
`;

exports[`snapshot tests works on 10 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "NONE",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": undefined,
  "logEmail": "REDEACT@hotmail.com",
  "logFile": null,
  "logLocation": undefined,
  "logMode": undefined,
  "logOperator": undefined,
  "logPower": undefined,
  "logScore": 790,
  "logStation": undefined,
  "logTransmitter": undefined,
  "multipleOperators": false,
  "name": "Henry Darnell",
}
`;

exports[`snapshot tests works on lowercase input 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": undefined,
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": "ALL",
  "logEmail": undefined,
  "logFile": null,
  "logLocation": undefined,
  "logMode": "SSB",
  "logOperator": "SINGLE",
  "logPower": "QRP",
  "logScore": 652,
  "logStation": "PORTABLE",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": undefined,
}
`;

exports[`snapshot tests works on normal input 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": undefined,
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": false,
  "logBand": "ALL",
  "logEmail": "ABC123@arrl.net",
  "logFile": null,
  "logLocation": "AR",
  "logMode": "SSB",
  "logOperator": "SINGLE",
  "logPower": "QRP",
  "logScore": 652,
  "logStation": "PORTABLE",
  "logTransmitter": "ONE",
  "multipleOperators": false,
  "name": "Henry Darnell",
}
`;

exports[`snapshot tests works on padded input 1`] = `
Object {
  "callsign": "ABC123",
  "category": "SSB",
  "claimedScore": 652,
  "club": "Hudson",
  "contestId": "123",
  "contestLocation": undefined,
  "email": "abc123@gmail.com",
  "logAssisted": true,
  "logBand": undefined,
  "logEmail": "REDACT.qrp@gmail.com",
  "logFile": null,
  "logLocation": "NY",
  "logMode": "MIXED",
  "logOperator": "SINGLE",
  "logPower": "QRP",
  "logScore": 1200,
  "logStation": "FIXED",
  "logTransmitter": undefined,
  "multipleOperators": false,
  "name": "REDACT",
}
`;
